@@ -2,7 +2,6 @@ package uk.gov.pay.adminusers.resources;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableMap;
 import org.junit.Before;
 import org.junit.Test;
 import uk.gov.pay.adminusers.fixtures.StripeAgreementDbFixture;
@@ -10,9 +9,11 @@ import uk.gov.pay.adminusers.model.Service;
 
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
+import java.util.Map;
 
 import static io.restassured.http.ContentType.JSON;
 import static java.lang.String.format;
+import static java.util.Collections.emptyMap;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.core.Is.is;
 import static uk.gov.pay.adminusers.fixtures.ServiceDbFixture.serviceDbFixture;
@@ -30,7 +31,7 @@ public class ServiceResourceStripeAgreementIT extends IntegrationTest {
 
     @Test
     public void shouldCreateStripeAgreement() {
-        JsonNode payload = new ObjectMapper().valueToTree(ImmutableMap.of(FIELD_IP_ADDRESS, "0.0.0.0"));
+        JsonNode payload = new ObjectMapper().valueToTree(Map.of(FIELD_IP_ADDRESS, "0.0.0.0"));
         givenSetup()
                 .when()
                 .accept(JSON)
@@ -42,7 +43,7 @@ public class ServiceResourceStripeAgreementIT extends IntegrationTest {
 
     @Test
     public void shouldReturn_NOT_FOUND_whenServiceNotFound() {
-        JsonNode payload = new ObjectMapper().valueToTree(ImmutableMap.of(FIELD_IP_ADDRESS, "0.0.0.0"));
+        JsonNode payload = new ObjectMapper().valueToTree(Map.of(FIELD_IP_ADDRESS, "0.0.0.0"));
         givenSetup()
                 .when()
                 .accept(JSON)
@@ -58,7 +59,7 @@ public class ServiceResourceStripeAgreementIT extends IntegrationTest {
                 .withServiceId(service.getId())
                 .insert();
 
-        JsonNode payload = new ObjectMapper().valueToTree(ImmutableMap.of(FIELD_IP_ADDRESS, "0.0.0.0"));
+        JsonNode payload = new ObjectMapper().valueToTree(Map.of(FIELD_IP_ADDRESS, "0.0.0.0"));
         givenSetup()
                 .when()
                 .accept(JSON)
@@ -72,7 +73,7 @@ public class ServiceResourceStripeAgreementIT extends IntegrationTest {
 
     @Test
     public void shouldReturn_422_whenProvidedInvalidIPAddress() {
-        JsonNode payload = new ObjectMapper().valueToTree(ImmutableMap.of(FIELD_IP_ADDRESS, "257.0.0.0"));
+        JsonNode payload = new ObjectMapper().valueToTree(Map.of(FIELD_IP_ADDRESS, "257.0.0.0"));
         givenSetup()
                 .when()
                 .accept(JSON)
@@ -86,7 +87,7 @@ public class ServiceResourceStripeAgreementIT extends IntegrationTest {
 
     @Test
     public void shouldReturn_422_whenIpAddressIsNotAString() {
-        JsonNode payload = new ObjectMapper().valueToTree(ImmutableMap.of(FIELD_IP_ADDRESS, 100));
+        JsonNode payload = new ObjectMapper().valueToTree(Map.of(FIELD_IP_ADDRESS, 100));
         givenSetup()
                 .when()
                 .accept(JSON)
@@ -100,7 +101,7 @@ public class ServiceResourceStripeAgreementIT extends IntegrationTest {
 
     @Test
     public void shouldReturn_422_whenIpAddressNotProvided() {
-        JsonNode payload = new ObjectMapper().valueToTree(ImmutableMap.of());
+        JsonNode payload = new ObjectMapper().valueToTree(emptyMap());
         givenSetup()
                 .when()
                 .accept(JSON)
